--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@
 # Site
 title: freedom club
 subtitle: ''
-description: ''
+description: '一个热爱生活的程序员'
 keywords:
 author: shenlvyu
 language: zh-CN
-timezone: ''
+timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
