--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: freedom club
 subtitle: ''
-description: '一个热爱生活的程序员'
+description: '一个热爱生活、热爱代码、向往自由的码农'
 keywords:
 author: shenlvyu
 language: zh-CN
