--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,8 @@
 
 # Site
 title: freedom club
-subtitle: ''
-description: '一个热爱生活、热爱代码、向往自由的码农
-do the right thing not the easy thing'
+subtitle: 'do the right thing not the easy thing'
+description: '一个热爱生活、热爱代码、向往自由的码农'
 keywords:
 author: shenlvyu
 language: zh-CN
