--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: freedom club
 subtitle: 'do the right thing not the easy thing'
 description: '一个热爱生活、热爱代码、向往自由的码农'
 keywords:
-author: 维尼的好朋友-老驴咿呦
+author: 老驴咿呦
 language: zh-CN
 timezone: 'Asia/Shanghai'
 
