--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 # Site
 title: freedom club
 subtitle: 'do the right thing not the easy thing'
-description: '一个热爱生活、热爱代码、向往自由的码农'
+description: '一个热爱生活、热爱代码、向往自由的程序员'
 keywords:
-author: 老驴咿呦
+author: 咿呦
 language: zh-CN
 timezone: 'Asia/Shanghai'
 
